# sms-spam-detection

./: Dockerfile  README.html  README.md  aws-api-test.py  lambda_function.py  model.py  notebook.ipynb  pyproject.toml  test.py
.ipynb_checkpoints/: notebook-checkpoint.ipynb
web-service/: predict-test.py  predict.py
