[tool.poetry]
name = "spam-detection"
version = "0.1.0"
description = ""
authors = ["Connor <106984058+MrCPJT@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
flask = "^3.0.0"
waitress = "^2.1.2"
nltk = "^3.8.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
